charon/tests/ui/simple/explicit_destruct_bound.rs
//@ known-failure
//@ charon-args=--hide-marker-traits
#![feature(const_destruct)]

use std::marker::Destruct;
fn drop<T: Destruct>(_: T) {}
